--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
 				</h3>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-6 column">
+				<form class="form-inline">
+				  <div class="form-group">
+					<label class="sr-only" for="url">Url</label>
+					<input type="text" class="form-control" id="url" placeholder="url">
+				  </div>
+				  <div class="form-group">
+					<label class="sr-only" for="param">param</label>
+					<input type="text" class="form-control" id="param" placeholder="param">
+				  </div>
+				  <div class="checkbox">
+					<label>
+					  <input type="checkbox"> Remember me
+					</label>
+				  </div>
+				  <button class="btn btn-default">Sign in</button>
+				</form>
+			</div>
+			<div class="col-md-6 column">
+				
+			</div>
+		</div>
 	</div>
 	<script type="text/javascript">
 		$(function() {// 初始化内容
